src/parser/snapshots/ling__parser__item__tests__assignment.snap
---
source: src/parser/item.rs
expression: "test_parse(\"a = 12\", |p| p.parse_stmt())"
---
(Ok(Assignment(
  lhs: Simple(Unresolved("a")),
  rhs: Const(ConstIdx(0)),
)), "")
