src/parser/snapshots/ling__parser__item__tests__block_empty.snap
---
source: src/parser/item.rs
expression: "test_parse(\"{}\", |p| p.parse_block())"
---
(Ok(Block(
  stmts: [],
  final_expr: Unit,
)), [], [])
