src/parser/snapshots/ling__parser__item__tests__block_final_expr.snap
---
source: src/parser/item.rs
expression: "test_parse(\"{12}\", |p| p.parse_block())"
---
(Ok(Block(
  stmts: [],
  final_expr: Const(ConstIdx(0)),
)), "")
