src/parser/snapshots/ling__parser__item__tests__block_no_final_expr.snap
---
source: src/parser/item.rs
expression: "test_parse(\"{12;}\", |p| p.parse_block())"
---
(Ok(Block(
  stmts: [
    Expr(Const(ConstIdx(0))),
  ],
  final_expr: Unit,
)), "")
