src/parser/snapshots/ling__parser__item__tests__block_two_exprs_no_final_expr.snap
---
source: src/parser/item.rs
expression: "test_parse(\"{14;12;}\", |p| p.parse_block())"
---
(Ok(Block(
  stmts: [
    Expr(Const(ConstIdx(0))),
    Expr(Const(ConstIdx(1))),
  ],
  final_expr: Unit,
)), "", [])
