src/parser/snapshots/ling__parser__item__tests__func_with_missing_ret_type.snap
---
source: src/parser/item.rs
expression: "test_parse(\"foo(a: uint) -> {}\", |p| p.parse_func())"
---
(Err(Unexpected(
  expected: "a type",
  span: Span(
    start: 16,
    end: 18,
  ),
)), "")
