src/parser/snapshots/ling__parser__item__tests__loop_assignment_target.snap
---
source: src/parser/item.rs
expression: "test_parse(\"loop {} = 12\", |p| p.parse_stmt())"
---
(Err(InvalidAssignmentTarget(Span(
  start: 0,
  end: 7,
))), "", [])
