src/parser/snapshots/ling__parser__item__tests__simple_func.snap
---
source: src/parser/item.rs
expression: "test_parse(\"foo() {}\", |p| p.parse_func())"
---
(Ok(Func(
  ident: Unresolved("foo"),
  ty_params: [],
  params: [],
  ret_ty: Tuple([]),
  body: Block(
    stmts: [],
    final_expr: Unit,
  ),
)), [], [])
