src/parser/snapshots/ling__parser__item__tests__tuple.snap
---
source: src/parser/item.rs
expression: "test_parse(\"(uint, uint)\", |p| p.parse_ty())"
---
(Ok(Tuple([
  Constructed(
    ident: Unresolved("uint"),
    params: [],
  ),
  Constructed(
    ident: Unresolved("uint"),
    params: [],
  ),
])), "")
